<resources>
    <string name="app_name">The Hair</string>
    <string name="default_user_name">Visitor</string>
    <string name="default_user_about">Run with limited permissions.</string>
    <string name="welcome_bt_register">Join Us</string>
    <string name="welcome_bt_login">Log In</string>
    <string name="welcome_tv">The Hair!To Find The Hair Stylist!</string>
    <string name="about_at">Back</string>
    <string name="login_at">Back</string>
    <string name="welcome_to_text_exit">Press once again to exit.</string>
    <string name="register_at">Back</string>
    <string name="register_alert_back_title">Back</string>
    <string name="register_alert_back_content">To give up the registration?</string>
    <string name="register_to_exit">Press once again to quit.</string>
    <string name="register_err_null_figure">Please set a profile picture.</string>
    <string name="register_pg_title">Join Us</string>
    <string name="login_pg_title">Log In</string>
    <string name="login_et_imeActionLabel_password">Log In</string>
    <string name="login_et_hint_password">Password</string>
    <string name="login_et_hint_sign">Email</string>
    <string name="login_bt_login_text">Log In</string>
    <string name="login_bt_findPassword_text">Forgot Password?</string>
    <string name="login_err_length_sign">Invalid Email</string>
    <string name="login_err_length_password">Invalid Password</string>
    <string name="login_err_null_sign">Email Required!</string>
    <string name="login_err_null_password">Password Required!</string>
    <string name="login_err_wrong_password">Invalid Email/Password!</string>
    <string name="register_bt_text_jiaface">Heart</string>
    <string name="register_bt_text_shenface">Diamond</string>
    <string name="register_bt_text_youface">Triangle</string>
    <string name="register_bt_text_guoface">Rectangle</string>
    <string name="register_bt_text_circleface">Round</string>
    <string name="register_bt_text_squareface">Square</string>
    <string name="register_bt_text_standardface">Oblong</string>
    <string name="register_bt_text_chosedFace">Your Face</string>
    <string name="register_pt_faceshape">1.Your Face</string>
    <string name="register_pt_hair">2.Your hair</string>
    <string name="register_tv_hairLength_text">Length</string>
    <string name="register_tv_bangType_text">Bangs</string>
    <string name="register_tv_curlyType_text">Curly</string>
    <string name="register_pt_figure">3.Profile</string>
    <string name="register_bt_figure">Head</string>
    <string name="register_tv_sex_text">Gender</string>
    <string name="register_tv_birthday_text">Birthday</string>
    <string name="register_tv_height_text">Height</string>
    <string name="register_tv_weight_text">Weight</string>
    <string name="register_pt_username">4.Finish</string>
    <string name="register_et_sign_hint">Email</string>
    <string name="register_et_userName_hint">User Name</string>
    <string name="register_et_password_hint">Password</string>
    <string name="register_bt_finish_text">Join!</string>
    <string name="register_bt_sex_female_text">Female</string>
    <string name="register_bt_sex_male_text">male</string>
    <string name="register_et_birthday_hint">92&#8211;1&#8211;1</string>
    <string name="register_et_height_hint">165</string>
    <string name="register_tv_height_unit_text">cm</string>
    <string name="register_tv_weight_unit_text">kg</string>
    <string name="register_et_weight_hint">50</string>
    <string name="register_err_null_birthday">Birthday Required</string>
    <string name="register_err_invalid_height">Invalid Height</string>
    <string name="register_err_invalid_weight">Invalid Weight</string>
    <string name="register_err_null_height">Height Required</string>
    <string name="register_err_null_weight">Weight Required</string>
    <string name="register_err_invalid_birthday">Invalid birthday</string>
    <string name="register_err_null_userName">UserName Required</string>
    <string name="err_signInvalid">Email Required</string>
    <string name="register_err_null_password">Password Required</string>
    <string name="title_activity_main">The Hair</string>
    <string name="action_bookings">Book</string>
    <string name="action_add">New</string>
    <string name="action_refresh">Refresh</string>
    <string name="comment_et_reply_text">Reply To%1$s:</string>
    <string name="booking_tv_agreedPrice_text">$%1$d</string>
    <string name="book_tv_discount_text">%1$d off</string>
    <string name="profile_dl_shop_title">Change Salon Picture</string>
    <string name="profile_dl_figure_title">Change Profile Picture</string>
    <string name="view_bt_booking_text">Bookings</string>
    <string name="view_bt_comment_text">Evaluations</string>
    <string name="view_bt_favor_text">Markings</string>
    <string name="view_bt_handle_text">Handle</string>
    <string name="book_tv_footer1">Time</string>
    <string name="book_tv_footer2">List-Price</string>
    <string name="book_tv_footer3">Discount</string>
    <string name="book_tv_footer4">Price</string>
    <string name="book_tv_footer5">Book</string>
    <string name="action_book">Book</string>
    <string name="poster_at_label">Comfirm&amp;Post</string>
    <string name="poster_tv_step1_text">Step 1:Upload pictures for the hair style.</string>
    <string name="poster_tv_step2_text">Step 2:Choose including services.</string>
    <string name="poster_tv_step3_text">Step 3:Choose hair length.</string>
    <string name="poster_tv_step4_text">Step 4:Choose bang style.</string>
    <string name="poster_tv_step5_text">Step 5:Choose curly or straight.</string>
    <string name="poster_tv_step6_text">Step 6:Choose suitable gender.</string>
    <string name="poster_tv_step7_text">Step 7:Choose suitable age ranges.</string>
    <string name="poster_tv_step8_text">Step 8:Choose suitable faces.</string>
    <string name="show_at_label">Confirm&amp;Post</string>
    <string name="show_tv_hair">Your Hairstyle</string>
    <string name="show_tv_notic_1">·Not less than one picture</string>
    <string name="show_tv_notic_2">·Not more than one hairstyle</string>
    <string name="viewer_at_label">Views</string>
    <string name="bookingset_at_label">Confirm&amp;Start taking Reservations.</string>
    <string name="bookingset_tv_listPrice_input">List Price</string>
    <string name="bookingset_tv_listPrice">List Price:$%1$d</string>
    <string name="bookingset_err_listPrice">Price Required</string>
    <string name="bookingset_tv_time">Business Hours:</string>
    <string name="register_tv_figure_text">Profile Picture</string>
    <string name="action_clearUpChat">Remove All</string>
    <string name="dialog_clearMessageBoxes_title">Remove All Messages</string>
    <string name="dialog_clearMessageBoxes_message">That will remove all messages!</string>
    <string name="dialog_clearHandledMessageBoxes_title">Remove Handled Messages</string>
    <string name="dialog_clearHandledMessageBoxes_message">That will remove the handled message!</string>
    <string name="dialog_clearMessageBox_title">Remove Message</string>
    <string name="dialog_clearMessageBox_message">That will remove the selected message!</string>
    <string name="dialog_clearHandledMessageBox_title">Remove handled</string>
    <string name="dialog_clearHandledMessageBox_message">That will remove all handled message!</string>
    <string name="dialog_rebuildMessageBox_title">Rebulid Messages</string>
    <string name="dialog_rebuildMessageBox_message">That will rebulid the messages!</string>
    <string name="dialog_deletePosting_title">Delete Post</string>
    <string name="dialog_deletePosting_message">That will delete the hair style!</string>
    <string name="dialog_book_title">Commit Reservation</string>
    <string name="dialog_book_message">That will commit a reservation.</string>
    <string name="dialog_dismarkPosting_title">Unmark</string>
    <string name="dialog_dismarkPosting_message">That will Unmark the hair style!</string>
    <string name="dialog_update_title">Download Finish!</string>
    <string name="dialog_update_message">Click to update The Hair v%1$s!</string>
    <string name="dialog_cancelBooking_title">Canceling Reservation</string>
    <string name="dialog_cancelBooking_message">That will cancel the reservation!</string>
    <string name="dialog_update_positive">Update</string>
    <string name="dialog_update_negative">Cancel</string>
    <string name="dialog_searchUser_title">Search User</string>
    <string name="dialog_searchUser_hint">via email/name/address</string>
    <string name="dialog_searchSalon_title">Search Salon</string>
    <string name="dialog_searchSalon_hint">via salon name/address</string>
    <string name="chat_input">Say to %1$s:</string>
    <string name="action_rebuildChat">Rebuild Messages</string>
    <string name="messagebox_tv_content_book">"Reservation Committing:%1$s\nPrice:$%2$s"</string>
    <string name="chat_tv_book_committing">"Time:%1$s\nPrice:$%2$s\n(%4$s of $%3$s)\nAccept?"</string>
    <string name="chat_tv_book_committed">"Time:%1$s\nPrice:$%2$s\n(%4$s of $%3$s)\nActived"</string>
    <string name="chat_tv_commit">%1$s has accepted your reservation.You could cancel it before the agreed Time at the reservation center.</string>
    <string name="messagebox_tv_content_commit">%1$s accepted your reservation.</string>
    <string name="chat_tv_comment">%1$s evaluate your service.You could explain for it in 15 days at the reservation center.</string>
    <string name="chat_tv_explain">%1$s explain for your evaluation.</string>
    <string name="chat_tv_report">%1$s report:%2$s</string>
    <string name="chat_tv_arbitrate">%1$s appeal:</string>
    <string name="chat_tv_follow">%1$s follow to you。</string>
    <string name="chat_tv_cancel">%1$s canceled the reservation。</string>
    <string name="chat_tv_invite">Salon %1$s invites you to join.Do you agree?</string>
    <string name="chat_tv_join">Apply to join %1$s.Do you agree?</string>
    <string name="chat_join_notAcceptable">The stylist has joined a salon!</string>
    <string name="chat_join_unauthorized">You are not the manager of the salon!</string>
    <string name="chat_invite_salonConflict">Please exit the salon:%1$s</string>
    <string name="messagebox_tv_manager_username">The Hair duty manager</string>
    <string name="messagebox_tv_manager_message">Do you have any question or suggestion?</string>
    <string name="messagebox_tv_content_comment">%1$s evaluate your service</string>
    <string name="messagebox_tv_content_explain">%1$s comfirm&amp;explain your evaluation。</string>
    <string name="messagebox_tv_content_arbitrate">%1$s appealed。</string>
    <string name="messagebox_tv_content_follow">%1$s follow you。</string>
    <string name="messagebox_tv_content_report">%1$s report:%2$s</string>
    <string name="messagebox_tv_content_cancel">%1$s canceled the reservation.</string>
    <string name="messagebox_tv_content_invite">%1$s invites you to join.</string>
    <string name="messagebox_tv_content_join">Apply to join %1$s.</string>
    <string name="message_title">Messages</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">OK</string>
    <string name="action_no">Cancel</string>
    <string name="action_clearHandledChat">Remove the handleds</string>
    <string name="action_handle">Handle</string>
    <string name="action_commit">Accept</string>
    <string name="status_loading">Loading&#8230;</string>
    <string name="action_save">Save</string>
    <string name="comment_tv_step1">Step 1:Show</string>
    <string name="comment_tv_step2">Step 2:Comment</string>
    <string name="comment_tv_step3">Step 3:Rate</string>
    <string name="comment_tv_content_hint">Edit Comment</string>
    <string name="action_map">Map</string>
    <string name="action_edit">Edit</string>
</resources>