<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_background"
    android:focusable="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="@drawable/shape_panel"
        android:focusable="false"
        android:padding="20.0dip" >

        <EditText
            android:id="@+id/register_et_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dip"
            android:drawableLeft="@drawable/icon_message_16"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/register_et_sign_hint"/>

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/register_et_sign"
            android:layout_below="@id/register_et_sign"
            android:layout_marginBottom="20.0dip"
            android:drawableLeft="@drawable/icon_lock_16"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/register_et_password_hint"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/register_et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/register_et_password"
            android:layout_below="@id/register_et_password"
            android:layout_marginBottom="20.0dip"
            android:drawableLeft="@drawable/icon_me_16"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/register_et_userName_hint"
            android:inputType="textPersonName" />

        <com.mifashow.ui.WrappedButtonGroup
            android:id="@+id/register_wv_userType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_height="40.0dip"
            android:layout_alignLeft="@id/register_et_userName"
            android:layout_below="@id/register_et_userName"
            app:layout_margin="10dip"
            app:texts="@array/enum_userType" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_bt_finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/selector_4"
        android:onClick="finish"
        android:text="@string/register_bt_finish_text" />

</RelativeLayout>