<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/comment_lo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="15.0dip" >

        <TextView
            android:id="@+id/comment_tv_step1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_tv_step1"
            android:textSize="24.0sp" />

        <com.mifashow.ui.WrappedViewGroup
            android:id="@+id/comment_wv_upload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:background="@drawable/shape_panel"
            android:padding="10.0dip" >

            <com.mifashow.ui.ResizedImageButton
                android:id="@+id/comment_iv_front"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/front"
                android:onClick="uploadImg"
                android:scaleType="fitCenter"
                android:src="@drawable/selector_6" />

            <com.mifashow.ui.ResizedImageButton
                android:id="@+id/comment_iv_back"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/back"
                android:onClick="uploadImg"
                android:scaleType="fitCenter"
                android:src="@drawable/selector_6" />

            <com.mifashow.ui.ResizedImageButton
                android:id="@+id/comment_iv_side"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/side"
                android:onClick="uploadImg"
                android:scaleType="fitCenter"
                android:src="@drawable/selector_6" />

            <com.mifashow.ui.ResizedImageButton
                android:id="@+id/comment_iv_more"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/more"
                android:onClick="uploadImg"
                android:scaleType="fitCenter"
                android:src="@drawable/selector_6" />
        </com.mifashow.ui.WrappedViewGroup>

        <TextView
            android:id="@+id/comment_tv_step2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_tv_step2"
            android:textSize="24.0sp" />

        <TextView
            android:id="@+id/comment_tv_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:padding="5dp"
            android:clickable="true"
            android:hint="@string/comment_tv_content_hint"
            android:onClick="input"
            android:textSize="16sp"
            android:background="@color/shadow_light" />

        <TextView
            android:id="@+id/comment_tv_step3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_tv_step3"
            android:textSize="24.0sp" />

        <RatingBar
            android:id="@+id/comment_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3.0"
            android:stepSize="1.0" />
    </LinearLayout>

</ScrollView>